# sneks-submission

./: README.md  pyproject.toml
src/examples/: food_motivated.py  left_turner.py
src/scripts/: __init__.py
src/submission/snek/: submission.py
